--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "http-shutdown": "1.2.2",
         "node-red": "1.x",
         "node-red-contrib-scx-ibmiotapp": "0.0.49",
+        "node-red-contrib-throttle": "^0.1.6",
         "node-red-node-cf-cloudant": "0.x",
         "node-red-node-openwhisk": "0.x",
         "node-red-node-watson": "0.x",
