--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-red-app",
+    "name": "ibm-iotp-maximo-node-red",
     "version": "1.1.1",
     "dependencies": {
         "@cloudant/cloudant": "^4.2.2",
